--- a/templates/index.html
+++ b/templates/index.html
@@ -507,9 +507,9 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
-                    <p>Email: info@themis-admin.com<br>
-                    Phone: +1 (555) 123-4567<br>
-                    Address: 123 Tech Avenue, Digital City, DC 12345</p>
+                    <p>Email: fallenfelix.discord@gmail.com<br>
+                    Discord: @fxllenfx<br>
+                   </p>
                 </div>
             </div>
             <div class="footer-bottom">
