Aktualisieren von index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -632,4 +632,8 @@
         });
 
         // Close modal with Escape key
-        document.ad
+        document.addEventListener('keydown', function(e) {
+    if (e.key === 'Escape') {
+        closeLoginModal();
+    }
+});
