fix logo in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -516,7 +516,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="https://cdn.discordapp.com/attachments/1359093144376840212/1391111028552765550/image.png?ex=686ab49a&amp;is=6869631a&amp;hm=5baa63756943b25cb072d90f4a771d19def015607ce11f8e0bc7d4e4265bc339&amp;" alt="Themis">
+                <img src="https://cdn.discordapp.com/attachments/1359093144376840212/1391111028552765550/image.png?ex=686caeda&is=686b5d5a&hm=2f7a401945da09ff951d426aaf651ade57dad6b6a52c567713aacf466c214a85&" alt="Themis">
                 Themis
             </div>
 
