removed footer elements

--- a/templates/index.html
+++ b/templates/index.html
@@ -611,23 +611,11 @@
                     <h4>System</h4>
                     <p>Themis Administration Platform<br>
                     Built by fx-Studios<br>
-                    Version 2.1.0</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Access</h4>
-                    <p>Authorized Personnel Only<br>
-                    Discord OAuth Required<br>
-                    Secure Connection</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Support</h4>
-                    <p>Internal Support Only<br>
-                    fx-Studios Team<br>
-                    Emergency Contact Available</p>
+                    Version 3.1.8</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2024 fx-Studios. All rights reserved. Private administration system.</p>
+                <p>© 2025 fx-Studios</p>
             </div>
         </div>
     </footer>
